test/sema/lambdas/lambda_explicit_return_type_error.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:17: error: failed to resolve type 'Err'
  let f = ->(): Err {};

  // CHECK: [[# @LINE + 1 ]]:3: error: symbol 'f' not found
  f();
}
